force-app/main/default/objects/Config__mdt/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <label>Related To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Brand_Quote_Line__c</fullName>
                <label>Brand Quote Line</label>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Invoice Line</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Order Line Item</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Picklist Line</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Pricebook</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Purchase Order Line</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Sales Order Line</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
            <value>
                <fullName>Shipping Manifest Line</fullName>
            </value>
            <value>
                <fullName>Shipping Manifest</fullName>
            </value>
            <value>
                <fullName>State License</fullName>
            </value>
            <value>
                <fullName>Community Settings</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Month Name</fullName>
            </value>
            <value>
                <fullName>Fulfillment Rates Table</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Filter</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
            </value>
            <value>
                <fullName>RMA Line</fullName>
            </value>
            <value>
                <fullName>Compliance Images</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>