force-app/main/default/objects/Config__mdt/fields/Used_In__c.field-meta.xml
<CustomField>
    <fullName>Used_In__c</fullName>
    <label>Used In</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>CRM &amp; Marketplace</fullName>
                <default>true</default>
                <label>CRM &amp; Marketplace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>