force-app/main/default/objects/Config__mdt/listViews/FRT_Config.listView-meta.xml
<ListView>
    <fullName>FRT_Config</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <columns>Key__c</columns>
    <columns>Value__c</columns>
    <columns>Related_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_To__c</field>
        <operation>equals</operation>
        <value>Fulfillment Rates Table</value>
    </filters>
    <label>FRT - Config</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>