force-app/main/default/objects/Config__mdt/listViews/Invoice_Config.listView-meta.xml
<ListView>
    <fullName>Invoice_Config</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <columns>Key__c</columns>
    <columns>Value__c</columns>
    <columns>Related_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_To__c</field>
        <operation>equals</operation>
        <value>Invoice Line,Invoice</value>
    </filters>
    <label>Invoice - Config</label>
    <sharedTo>
        <group>Filigreen_Admin_Users</group>
    </sharedTo>
</ListView>